--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </script>
 </head>
 <body>
-<h1> My sample bjhsdcjvsd </h1>
-<p> This is just a paragraph. </p>
+<h1> My sample website. </h1>
+<p> This is the home page. </p>
+<a href="second.html">Click here to move forward.</a>
 </body>
 </html>
