--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   </script>
 </head>
 <body>
+_pcq.push(['APIReady', callbackOnSuccessFunction,callbackOnFailureFunction]); //will execute callback function when PushCrew API is ready
+
+function callbackOnSuccessFunction() {
+    console.log("API is ready")
+}
+
+function callbackOnFailureFunction(values) {
+    console.log(values.reasons) //It will give you the array of reasons why PushCrew API could not get ready .For eg:- ["PRIVATE_BROWSING", "BROWSER_NOT_SUPPORTED"] etc.
+}
 <h1> My sample website. </h1>
 <p> This is the home page. </p>
 <a href="second.html">Click here to move forward.</a>
