--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         h.parentNode.insertBefore(s,h);
     })(window,document);
   </script>
-  _pcq.push(['APIReady', callbackOnSuccessFunction,callbackOnFailureFunction]); //will execute callback function when PushCrew API is ready
+  p._pcq.push(['APIReady', callbackOnSuccessFunction,callbackOnFailureFunction]); //will execute callback function when PushCrew API is ready
 
   function callbackOnSuccessFunction() {
     console.log("API is ready")
