--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   }
 
   function callbackOnFailureFunction(values) {
-    console.log(values.reasons)
+    console.log("Incognito mode is on!!!")
   }
   </script>
 </head>
