--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   function callbackOnFailureFunction(values) {
     console.log("Incognito mode is on!!!")
   }
+  _pcq.push(['noTrigger',true])
   </script>
 </head>
 <body>
