--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     console.log("Incognito mode is on!!!")
   }
   _pcq.push(['noTrigger',true])
+  console.log("Here")
   </script>
 </head>
 <body>
