--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     _pcq.push(['APIReady', callbackOnSuccessFunction,callbackOnFailureFunction]);
 
   function callbackOnSuccessFunction() {
+    console.log("Here")
     _pcq.push(['noTrigger', true])
   }
 
