--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
   function callbackOnSuccessfulSubscription(subscriberId, values) {
     //user just got subscribed
-    _pcq.push(['removeSubscriberFromSegment', 'Boys', callbackForRemoveFromSegment]);
+    _pcq.push(['removeSubscriberFromSegment', 'Boyss', callbackForRemoveFromSegment]);
   }
   </script>
 </head>
