--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
   
       if(response === true) {
-          console.log('User got added to the segment successfully. Now you may run any code you wish to execute after user gets added to segment successfully');
+          console.log('User got deleted from the segment successfully.');
       }
     }
     
