--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-  <link rel="manifest" href="/manifest.json" />
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  var OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "26c591b6-cb93-4194-92c4-859b07b1f5f8",
-    });
-  });
-</script>
+  <script type="text/javascript">
+    (function(p,u,s,h){
+        p._pcq=p._pcq||[];
+        p._pcq.push(['_currentTime',Date.now()]);
+        s=u.createElement('script');
+        s.type='text/javascript';
+        s.async=true;
+        s.src='https://cdn.pushcrew.com/js/03283f9b1ebd70103715ad9ff738d47f.js';
+        h=u.getElementsByTagName('script')[0];
+        h.parentNode.insertBefore(s,h);
+    })(window,document);
+  </script>
 </head>
 <body>
 <h1> My sample website. </h1>
