--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<script>
 	_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]); //registers callback function to be called when user gets successfully subscribed
-	document.getElementById("bellIcon").style.display = "none";}
+	document.getElementById("bellIcon").style.display = "none";
 	</script>
 	
 </head>
