--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	
 	<script>
 	_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]); //registers callback function to be called when user gets successfully subscribed
+	function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {	
 	document.getElementById("bellIcon").style.display = "none";
+	}
 	</script>
 	
 </head>
