--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]); //registers callback function to be called when user gets successfully subscribed
 	function callbackFunctionOnFailedSubscription(values) {
 		
-		if (pushcrew.subscriberID== -1)
+		if (pushcrew.subscriberId== -1)
 		    {
 		document.getElementById("bellIcon").style.display = "none";
 	}
