--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
 	
 	<script>
-	if (pushcrew.subscriberId=== -1){
+	if (pushcrew.subscriberId== -1){
 		document.getElementById("bellIcon").style.display = "none";
 	}
 	_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]); //registers callback function to be called when user gets successfully subscribed
