--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 	
 	<script>
 	_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]); //registers callback function to be called when user gets successfully subscribed
-	function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {	
+	function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
+		if (pushcrew.subscribed== true){
 		document.getElementById("bellIcon").style.display = "none";
+		}
 	}
 	_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]); //registers callback function to be called when user gets successfully subscribed
 	function callbackFunctionOnFailedSubscription(values) {
+		if (pushcrew.subscribed== false)
 		document.getElementById("bellIcon").style.display = "none";
 	}
 	</script>
