--- a/index.html
+++ b/index.html
@@ -14,20 +14,27 @@
     })(window,document);
   </script>
 	
-	<script>
+<script>
+	var checkStatus = localStorage.getItem('wingify_push_subscription_status');
+	if (chechStatus== "subscribed") {
+		document.getElementById("bellIcon").style.display = "none";
+	}
+	
 	_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]); //registers callback function to be called when user gets successfully subscribed
 	function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
 		if (pushcrew.subscriberId!= -1){
-		document.getElementById("bellIcon").style.display = "none";
+			document.getElementById("bellIcon").style.display = "none";
 		}
 	}
+	
 	_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]); //registers callback function to be called when user gets successfully subscribed
 	function callbackFunctionOnFailedSubscription(values) {
 		if (pushcrew.subscriberId!= -1){
-		document.getElementById("bellIcon").style.display = "none";
+			document.getElementById("bellIcon").style.display = "none";
 		}
 	}
-	</script>
+	
+</script>
 	
 </head>
 <body>
