--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	
 <script>
 	var checkStatus = localStorage.getItem('wingify_push_subscription_status');
+	console.log(checkStatus);
 	if (chechStatus== "subscribed") {
 		document.getElementById("bellIcon").style.display = "none";
 	}
