--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="bell.css" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137605282-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){
+		  dataLayer.push(arguments);
+	  }
+	  gtag('js', new Date());
+	  gtag('config', 'UA-137605282-1');
+	</script>
 	<script type="text/javascript">
 		(function(p,u,s,h){
 		p._pcq=p._pcq||[];
