--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 		h.parentNode.insertBefore(s,h);
 		})(window,document);
 	</script>
+	<script>
+		 var name = "Shivam";
+		 var email_address = 'shivam.aggarwal@wingify.com';
+		 console.log(email_address);
+	</script>
+	  
+	  <!-- Email address custom attribute -->
+	<script>
+		window._pcq = window._pcq || [];
+		window._pcq.push(['tag', 'email', email_address]);
+	</script>
 </head>
 <body>
 	<h1> My sample website. </h1>
