--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 			}
 			_pcq.push(['triggerOptIn']);
 		}
-		//_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
-		//console.log(checkStatus);
-		//function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
-		//	document.getElementById("bellIcon").style.display = "none";
-		//}
-		//_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
-		//function callbackFunctionOnFailedSubscription(values) {
-		//		document.getElementById("bellIcon").style.display = "none";
-		//}
+		_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
+		console.log(checkStatus);
+		function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
+			document.getElementById("bellIcon").style.display = "none";
+		}
+		_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
+		function callbackFunctionOnFailedSubscription(values) {
+				document.getElementById("bellIcon").style.display = "none";
+		}
 	</script>
 </body>
 </html>
