--- a/index.html
+++ b/index.html
@@ -47,14 +47,20 @@
 	</div>
 	<script>
 		var checkStatus = localStorage.getItem('wingify_push_subscription_status');
-		_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
+		//_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
 		console.log(checkStatus);
-		function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
+		//function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
+		//	document.getElementById("bellIcon").style.display = "none";
+		//}
+		//_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
+		//function callbackFunctionOnFailedSubscription(values) {
+		//		document.getElementById("bellIcon").style.display = "none";
+		//}
+		if (checkStatus== "subscribed") {
 			document.getElementById("bellIcon").style.display = "none";
-		}
-		_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
-		function callbackFunctionOnFailedSubscription(values) {
-				document.getElementById("bellIcon").style.display = "none";
+		}	
+		if (Notification.permission== "denied"){
+			window.open("https://help.vwo.com/hc/en-us/articles/360007700494-How-to-unblock-notifications-from-a-website-that-you-once-blocked-", '_blank', 'width=700,height=500,left=200,top=100');			
 		}
 		function bellIconClicked() {
 			if (checkStatus== "subscribed") {
