--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 				window.open("https://help.vwo.com/hc/en-us/articles/360007700494-How-to-unblock-notifications-from-a-website-that-you-once-blocked-", '_blank', 'width=700,height=500,left=200,top=100');			
 			}
 			_pcq.push(['triggerOptIn']);
+			if (Notification.permission== "default"){
+				_pcq.push(['triggerOptIn']);	
+			}
 		}
 	</script>
 </body>
