--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 		function callbackFunctionOnSuccessfulSubscription(subscriberId, values) {
 			document.getElementById("bellIcon").style.display = "none";
 		}
-		_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
-		function callbackFunctionOnFailedSubscription(values) {
-				document.getElementById("bellIcon").style.display = "none";
-		}
+		//_pcq.push(['subscriptionFailureCallback',callbackFunctionOnFailedSubscription]);
+		//function callbackFunctionOnFailedSubscription(values) {
+		//		document.getElementById("bellIcon").style.display = "none";
+		//}
 		if (checkStatus== "subscribed") {
 			document.getElementById("bellIcon").style.display = "none";
 		}	
