--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 	</script>
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5ZDBHF"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
 	<h1> My sample website. </h1>
 	<p> This is the home page. </p>
 	<a href="second.html">Click here to move forward.</a>
