--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <html>
 <head>
+	<style>
+		.pushcrew-chrome-style-notification-safari {
+		     background-color: #FFF !important;
+		}
+		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
+		     border: 1px solid #f5a019 !important;
+		     border-radius: 0px !important;
+		     background: #f5a019 !important;
+		     width: 146px !important;
+		}
+		div.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-close {
+		     border: 1px solid #362d2e !important;
+		     border-radius: 0px !important;
+		     background: #362d2e !important;
+		     color: #FFF!important;
+		     width: 146px !important;
+		     margin-right: 10px !important;
+		}
+	</style>
 	<link rel="stylesheet" type="text/css" href="bell.css" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137605282-1"></script>
