--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		.pushcrew-chrome-style-notification-safari {
 		     background-color: #FFF !important;
 		}
+		.pushcrew-notification-title-safari {
+			font-size: 20px;
+		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
 		     border-radius: 0px !important;
