--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
 		     border-radius: 0px !important;
-		     background: #f5a019 !important;
+		     background: #fd6c2e !important;
 		     width: 146px !important;
 		}
 		div.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-close {
