--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		.pushcrew-notification-title-safari {
 			font-size: 20px;
 		}
+		.pushcrew-notification-message-safari {
+			font-size: 16px;
+		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
 		     border-radius: 0px !important;
@@ -81,6 +84,35 @@
 	</svg>
 	<div class="bell-icon-message">Subscribe to Notifications</div>
 	</div>
+	<script type="text/javascript">
+		// select the target node
+		var target = document.querySelector('body');
+
+		// create an observer instance
+		var observer = new MutationObserver(function(mutations) {
+		    mutations.forEach(function(mutation) {
+			if (mutation.addedNodes && mutation.addedNodes.length) {
+			    var node = mutation.addedNodes[0];
+			    if (node.classList && node.classList.value === 'pushcrew-chrome-style-notification pushcrew-chrome-style-notification-safari') {
+				if (document.getElementsByClassName('pushcrew-notification-message-safari')[0]) {
+				    var closeBtn = document.getElementsByClassName('pushcrew-chrome-style-notification-btn')[0];
+				    var allowBtn = document.getElementsByClassName('pushcrew-chrome-style-notification-btn')[1];
+				    closeBtn.innerHTML = 'Deny Notifications';
+				    allowBtn.innerHTML = 'Allow Notifications';
+				    document.getElementsByClassName('pushcrew-notification-message-safari')[0].innerHTML = 'I have read Napapijri\'s <a href="https://www.napapijri.co.uk/help/privacy.html" target="_blank" style="text-decoration: none;"> Privacy Policy </a> and I consent to the processing of my personal data for marketing and profiling purpose.';
+				    observer.disconnect();
+				}
+			    }
+			}
+		    });
+		});
+
+		// configuration of the observer:
+		var config = { attributes: true, childList: true, characterData: true }
+
+		// pass in the target node, as well as the observer options
+		observer.observe(target, config);
+	</script>
 	<script>
 		var checkStatus = localStorage.getItem('wingify_push_subscription_status');
 		_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
