--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				    var allowBtn = document.getElementsByClassName('pushcrew-chrome-style-notification-btn')[1];
 				    closeBtn.innerHTML = 'Deny Notifications';
 				    allowBtn.innerHTML = 'Allow Notifications';
-				    document.getElementsByClassName('pushcrew-notification-message-safari')[0].innerHTML = 'I have read Napapijri\'s <a href="https://www.napapijri.co.uk/help/privacy.html" target="_blank" style="text-decoration: none; font-size: 16px;"> Privacy Policy </a> and I consent to the processing of my personal data for marketing and profiling purpose.';
+				    document.getElementsByClassName('pushcrew-notification-message-safari')[0].innerHTML = 'I have read Napapijri\'s <a href="https://www.napapijri.co.uk/help/privacy.html" target="_blank" style="text-decoration: none;"> Privacy Policy </a> and I consent to the processing of my personal data for marketing and profiling purpose.';
 				    observer.disconnect();
 				}
 			    }
