--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		     background-color: #FFF !important;
 		}
 		.pushcrew-notification-title-safari {
-			font-size: 20px;
+			font-size: 20px !important;
+		}
+		.pushcrew-notification-message-safari {
+			font-size: 16px !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
