--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
 <head>
+	@font-face {
+		font-family: Akkurat-Bold;
+		src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold");
+	}
 	<style>
 		.pushcrew-chrome-style-notification-safari {
 		     background-color: #FFF !important;
+		}
+		.pushcrew-notification-title-safari {
+			font-family: Akkurat-Bold;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
