--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-	@font-face {
-		font-family: Akkurat-Bold;
-		src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold");
-	}
+	<style>
+		@font-face {
+			font-family: Akkurat-Bold;
+			src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold");
+		}
+	</style>
 	<style>
 		.pushcrew-chrome-style-notification-safari {
 		     background-color: #FFF !important;
