--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<style>
 		@font-face {
 			font-family: Akkurat-Bold;
-			src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold");
+			src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Light");
 		}
 	</style>
 	<style>
