--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+	<link href="//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold" rel="stylesheet" type="text/css"/>
 	<style>
 		@font-face {
 			font-family: Akkurat-Bold;
-			src: url("//db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Light");
+			src: url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.eot"); src: url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.woff") format("woff"), url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.svg#Akkurat-Bold") format("svg");
 		}
 	</style>
 	<style>
@@ -11,7 +12,7 @@
 		     background-color: #FFF !important;
 		}
 		.pushcrew-notification-title-safari {
-			font-family: Akkurat-Bold;
+			font-family: Akkurat-Bold !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
