--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
 <head>
 	<link href="https://db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold" rel="stylesheet" type="text/css"/>
-	<style>
-		@font-face {
-			font-family: "Akkurat-Bold";
-			src: url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.eot"); src: url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.woff") format("woff"), url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/cc4c7e3aa2ab2258b5e0bc946be1093a.svg#Akkurat-Bold") format("svg");
+	<style  type="text/css">
+		@font-face {font-family: "Akkurat-Bold";
+		  src: url("cc4c7e3aa2ab2258b5e0bc946be1093a.eot"); /* IE9*/
+		  src: url("cc4c7e3aa2ab2258b5e0bc946be1093a.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+		  url("cc4c7e3aa2ab2258b5e0bc946be1093a.woff2") format("woff2"), /* chrome、firefox */
+		  url("cc4c7e3aa2ab2258b5e0bc946be1093a.woff") format("woff"), /* chrome、firefox */
+		  url("cc4c7e3aa2ab2258b5e0bc946be1093a.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+		  url("cc4c7e3aa2ab2258b5e0bc946be1093a.svg#Akkurat-Bold") format("svg"); /* iOS 4.1- */
 		}
 	</style>
 	<style>
@@ -12,7 +16,7 @@
 		     background-color: #FFF !important;
 		}
 		.pushcrew-notification-title-safari {
-			font-family: Akkurat-Bold !important;
+			font-family: "Akkurat-Bold" !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
