--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link href="https://db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold" rel="stylesheet" type="text/css"/>
+	<!-- <link href="https://db.onlinewebfonts.com/c/cc4c7e3aa2ab2258b5e0bc946be1093a?family=Akkurat-Bold" rel="stylesheet" type="text/css"/> -->
 	<style  type="text/css">
 		@font-face {font-family: "Akkurat-Bold";
 		  src: url("cc4c7e3aa2ab2258b5e0bc946be1093a.eot"); /* IE9*/
