--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		     background-color: #FFF !important;
 		}
 		.pushcrew-notification-title-safari {
-			font-family: "Akkurat-Bold" !important;
+			font-size: 20px !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
 		     border: 1px solid #f5a019 !important;
