--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <head>
 	<style>
 		.pushcrew-chrome-style-notification-safari {
-		     background-color: #FFF !important;
+		     	background-color: #FFF !important;
+			color: inherit !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
-		     border: 1px solid #f5a019 !important;
-		     border-radius: 0px !important;
-		     background: #fd6c2e !important;
-		     width: 146px !important;
+			border: 1px solid #f5a019 !important;
+			border-radius: 0px !important;
+			background: #fd6c2e !important;
+			width: 146px !important;
 		}
 		div.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-close {
-		     border: 1px solid #362d2e !important;
-		     border-radius: 0px !important;
-		     background: #362d2e !important;
-		     color: #FFF!important;
-		     width: 146px !important;
-		     margin-right: 10px !important;
+			border: 1px solid #362d2e !important;
+			border-radius: 0px !important;
+			background: #362d2e !important;
+			color: #FFF!important;
+			width: 146px !important;
+			margin-right: 10px !important;
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="bell.css" />
