--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<style>
 		.pushcrew-chrome-style-notification-safari {
 		     	background-color: #FFF !important;
+		}
+		.pushcrew-chrome-style-notification-safari * {
 			color: inherit !important;
 		}
 		.pushcrew-chrome-style-notification-safari .pushcrew-chrome-style-notification-btn.pushcrew-btn-allow {
