--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 				if (document.getElementsByClassName('pushcrew-notification-message-safari')[0]) {
 				    var closeBtn = document.getElementsByClassName('pushcrew-chrome-style-notification-btn')[0];
 				    var allowBtn = document.getElementsByClassName('pushcrew-chrome-style-notification-btn')[1];
-				    closeBtn.innerHTML = 'Block Notifications';
-				    allowBtn.innerHTML = 'Allow Notifications';
+				    closeBtn.innerHTML = 'Block notifications';
+				    allowBtn.innerHTML = 'Allow notifications';
 					document.getElementsByClassName('pushcrew-notification-title-safari')[0].innerHTML = 'Be the first to receive Napapijri\'s news and promotions.';
 				    document.getElementsByClassName('pushcrew-notification-message-safari')[0].innerHTML = 'I have read Napapijri\'s <a href="https://www.napapijri.co.uk/help/privacy.html" target="_blank" style="text-decoration: none;"> <u>Privacy Policy</u> </a> and I consent to the processing of my personal data for marketing and profiling purpose.';
 				    observer.disconnect();
