--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-M5ZDBHF');</script>
 	<!-- End Google Tag Manager -->
-	<!--
 	<script type="text/javascript">
 		(function(p,u,s,h){
 		p._pcq=p._pcq||[];
@@ -54,9 +53,9 @@
 		h.parentNode.insertBefore(s,h);
 		})(window,document);
 	</script>
-	-->
 	
 	<!-- Start VWO Async Smartcode -->
+	<!--
 	<script type='text/javascript'>
 		window._vwo_code = window._vwo_code || (function(){
 		var account_id=435160,
@@ -69,7 +68,7 @@
 		/* DO NOT EDIT BELOW THIS LINE */
 		f=false,d=document,code={use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){
 		window.settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b=hide_element?hide_element+'{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}':'',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&f='+(+is_spa)+'&r='+Math.random());return settings_timer; }};window._vwo_settings_timer = code.init(); return code; }());
-	</script>
+	</script> -->
 	<!-- End VWO Async Smartcode -->
 	
 	<script>
@@ -129,6 +128,15 @@
 		// pass in the target node, as well as the observer options
 		observer.observe(target, config);
 	</script> -->
+	
+	<script>
+            	var a=true;
+		if (a==true){
+				console.log("Works");
+				window._pcq.push(['triggerOptIn']);
+			}
+        </script>
+	
 	<script>
 		var checkStatus = localStorage.getItem('wingify_push_subscription_status');
 		_pcq.push(['subscriptionSuccessCallback',callbackFunctionOnSuccessfulSubscription]);
