--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	
 	<h1> My sample website. </h1>
 	<p> This is the home page. </p>
-	<a href="#" onclick="buttonClicked()">Click here to move forward.</a>
+	<a href="./" onclick="buttonClicked()">Click here to move forward.</a>
 	<script>
 		var checkStatus = localStorage.getItem('wingify_push_subscription_status');
 		console.log(checkStatus);
